# Confetti

./: .gitmodules  Appearance.cpp  Appearance.h  Builder.cpp  Builder.h  CMakeLists.txt  Confetti.h  Confetti.rc  Configuration.cpp  Configuration.h  Configuration.xsd  Doxyfile  Doxyfile.in  Effect of Drag on Particle Motion.md  Emitter.cpp  Emitter.h  Emitter.inl  EmitterVolume.cpp  EmitterVolume.h  Environment.cpp  Environment.h  JsonConfiguration.cpp  LICENSE  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  PointParticle.cpp  PointParticle.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  README.md  SphereParticle.cpp  SphereParticle.h  StreakParticle.cpp  StreakParticle.h  TexturedParticle.cpp  TexturedParticle.h  TexturedParticle.psh  TexturedParticle.vsh  (+2 more)
Test/: main.cpp
cmake/: ConfettiConfig.cmake.in
doc/: Effect of Drag on Particle Motion.md
include/Confetti/: Appearance.h  Builder.h  Confetti.h  Configuration.h  Emitter.h  EmitterVolume.h  Environment.h  JsonConfiguration.h  Particle.h  ParticleSystem.h  PointParticle.h  SphereParticle.h  StreakParticle.h  TexturedParticle.h  XmlConfiguration.h
res/: PointParticle.fx  PointParticle.fxo  StreakParticle.fxo  TexturedParticle.fx  TexturedParticle.fxo
samples/: CMakeLists.txt  main.cpp
shaders/: StreakParticle.fx
test/: CMakeLists.txt  test-Configuration.cpp  test-JsonConfiguration.cpp  test-JsonConfiguration.json  test-Placeholder.cpp
unit-test/: CMakeLists.txt  Configuration.xml  Test.vcproj  Test.vcxproj  main.cpp
